--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
         </style>
     </head>
     <body>
-        <h1>Hello There!</h1>
+        <!-- Navigation bar -->
+        <div class="navbar">
+            <div class="navbar-item">
+                <a href="index.html">
+                    <img src="images/Logo.png" title="Home Page" alt="Logo">
+                </a>
+            </div>
+                <a class="home" href="index.html">Home</a>
+            <div class="navbar-dropdown-hover">
+                <button class="dropbtn">Guides</button>
+                <div class="navbar-dropdown">
+                    <a class="navbar-item" href="#">Meso Guide</a>
+                    <a class="navbar-item" href="#">Starforce Guide</a>
+                </div>
+            </div>
+            <div class="navbar-dropdown-hover">
+                <button class="dropbtn">Informations</button>
+                <div class="navbar-dropdown">
+                    <a class="navbar-item" href="#">Equipments PBA</a>
+                </div>
+            </div>
+            </div>
+        </div>
     </body>
 </html>
