Addition of files

--- a/starForce.html
+++ b/starForce.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Maplestory Mobile Guides</title>
+        <title>Maplestory Star Force Guides</title>
         <link rel="stylesheet" href="style.css">
         <style>
             
@@ -30,6 +30,6 @@
                 </div>
             </div>
             </div>
-        </div>
+        </div>        
     </body>
 </html>
