--- a/pba.html
+++ b/pba.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Maplestory Mobile Guides</title>
+        <title>Maplestory Perfect Base Attack Guides</title>
         <link rel="stylesheet" href="style.css">
         <style>
             
