--- a/starForce.html
+++ b/starForce.html
@@ -29,7 +29,7 @@
                     <a class="navbar-item" href="pba.html">Equipments PBA</a>
                 </div>
             </div>
-            </div>
-        </div>        
+                <a class="contact" href="contact.html">Contact</a>
+        </div>
     </body>
 </html>
