Adding leveling guide html file

--- a/starForce.html
+++ b/starForce.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Maplestory Star Force Guides</title>
+        <title>Maplestory Mobile Guides</title>
         <link rel="stylesheet" href="style.css">
         <style>
             
@@ -21,6 +21,7 @@
                 <div class="navbar-dropdown">
                     <a class="navbar-item" href="mesoG.html">Meso Guide</a>
                     <a class="navbar-item" href="starForce.html">Starforce Guide</a>
+                    <a class="navbar-item" href="level.html">Leveling Guide</a>
                 </div>
             </div>
             <div class="navbar-dropdown-hover">
