--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
                 <div class="navbar-dropdown">
                     <a class="navbar-item" href="mesoG.html">Meso Guide</a>
                     <a class="navbar-item" href="starForce.html">Starforce Guide</a>
+                    <a class="navbar-item" href="level.html">Leveling Guide</a>
                 </div>
             </div>
             <div class="navbar-dropdown-hover">
