adding header to weapon PBA

--- a/pba.html
+++ b/pba.html
@@ -32,5 +32,6 @@
             </div>
                 <a class="contact" href="contact.html">Contact</a>
         </div>
+        <h1 class="pbaH1">Weapon Perfect Base Attack</h1>
     </body>
 </html>
