SF Page and alignment

--- a/starForce.html
+++ b/starForce.html
@@ -32,5 +32,6 @@
             </div>
                 <a class="contact" href="contact.html">Contact</a>
         </div>
+        <h1 class="sfH1">Star Force Guide!</h1>
     </body>
 </html>
