level page header and alginments

--- a/level.html
+++ b/level.html
@@ -32,5 +32,6 @@
             </div>
                 <a class="contact" href="contact.html">Contact</a>
         </div>
+        <h1 class="levelH1">Level Guide!</h1>
     </body>
 </html>
