Contact Alignment and color

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
         <!-- Creating the form for feedback -->
         <main>
             <h2 class="formTitle">
-                Do let us know if there are anything wrong or information to be added!               
+                Any Errors or Missing Informations? Pleae let us know!         
             </h2>
             <form>
                 <div class="form-row">
