--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Maplestory Mobile Guides</title>
         <link rel="stylesheet" href="style.css">
         <style>
-            
+
         </style>
     </head>
     <body>
@@ -12,7 +12,7 @@
         <div class="navbar">
             <div class="navbar-item">
                 <a href="index.html">
-                    <img src="images/Logo.png" title="Home Page" alt="Logo">
+                    <img class="homelogo" src="images/Logo.png" title="Home Page" alt="Logo">
                 </a>
             </div>
                 <a class="home" href="index.html">Home</a>
