--- a/starForce.html
+++ b/starForce.html
@@ -33,5 +33,6 @@
                 <a class="contact" href="contact.html">Contact</a>
         </div>
         <h1 class="sfH1">Star Force Guide!</h1>
+        <h2 class="sfH2">Never upgrade your unique weapon until it has SF18/19!</h2>
     </body>
 </html>
