--- a/level.html
+++ b/level.html
@@ -28,6 +28,7 @@
                 <button class="dropbtn">Informations</button>
                 <div class="navbar-dropdown">
                     <a class="navbar-item" href="pba.html">Equipments PBA</a>
+                    <a class="navbar-item" href="sfCost.html">Star Force Costs</a>
                 </div>
             </div>
                 <a class="contact" href="contact.html">Contact</a>
