--- a/sfCost.html
+++ b/sfCost.html
@@ -33,6 +33,6 @@
             </div>
                 <a class="contact" href="contact.html">Contact</a>
         </div>
-        <h1 class="sfc">Mesos Required to enhance your Star Force</h1>
+        <h1 class="sfcH1">Mesos Required to enhance your Star Force</h1>
     </body>
 </html>
