--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="navbar-dropdown-hover">
                 <button class="dropbtn">Informations</button>
                 <div class="navbar-dropdown">
+                    <a class="navbar-item" href="acronym.html">Acronyms</a>
                     <a class="navbar-item" href="pba.html">Equipments PBA</a>
                     <a class="navbar-item" href="sfCost.html">Star Force Costs</a>
                 </div>
