Trying to edit forms...

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                         <input id="message" name="message" placeholder="Type away!" type="textarea">
                     </div>
                     <div class="form-submit">
-                        <input type="submit" value="Send!">
+                        <input id="button" type="submit" value="Send!">
                     </div>
                 </div>
                 <!---
