Adding content in SF costs

--- a/sfCost.html
+++ b/sfCost.html
@@ -35,5 +35,27 @@
                 <a class="contact" href="contact.html">Contact</a>
         </div>
         <h1 class="sfcH1">Mesos Required to enhance your Star Force</h1>
+
+        <!-- Making the table -->
+        <table>
+            <tr>
+                <th>Current Star Force</th>
+                <th>Next Star Force</th>
+                <th>Costs</th>
+                <th>Success Rate</th>
+                <th>Maintain Rate</th>
+                <th>Degrade Rate</th>
+                <th>Destroyed Rate</th>
+            </tr>
+            <tr>
+                <td>0</td>
+                <td>1</td>
+                <td>5,000</td>
+                <td>100%</td>
+                <td>0%</td>
+                <td>0%</td>
+                <td>0%</td>
+            </tr>
+        </table>
     </body>
 </html>
