--- a/sfCost.html
+++ b/sfCost.html
@@ -37,7 +37,7 @@
         <h1 class="sfcH1">Mesos Required to enhance your Star Force</h1>
 
         <!-- Making the table -->
-        <table>
+        <table class="sfcTable">
             <tr>
                 <th>Current Star Force</th>
                 <th>Next Star Force</th>
