Adding some content for PBA

--- a/pba.html
+++ b/pba.html
@@ -35,5 +35,13 @@
                 <a class="contact" href="contact.html">Contact</a>
         </div>
         <h1 class="pbaH1">Weapon Perfect Base Attack</h1>
+
+        <!-- Table For PBA -->
+        <table class="pbaTable">
+            <tr>
+                <th></th>
+                <th>Normal</th>
+            </tr>
+        </table>
     </body>
 </html>
