--- a/sfCost.html
+++ b/sfCost.html
@@ -39,220 +39,220 @@
         <!-- Making the table -->
         <table class="sfcTable">
             <tr>
-                <th>Current Star Force</th>
-                <th>Next Star Force</th>
-                <th>Costs</th>
-                <th>Success Rate</th>
-                <th>Maintain Rate</th>
-                <th>Degrade Rate</th>
-                <th>Destroyed Rate</th>
+                <th class="sfcTH">Current Star Force</th>
+                <th class="sfcTH">Next Star Force</th>
+                <th class="sfcTH">Costs</th>
+                <th class="sfcTH">Success Rate</th>
+                <th class="sfcTH">Maintain Rate</th>
+                <th class="sfcTH">Degrade Rate</th>
+                <th class="sfcTH">Destroyed Rate</th>
             </tr>
             <tr>
-                <td>0</td>
-                <td>1</td>
-                <td>5,000</td>
-                <td>100%</td>
-                <td>0%</td>
-                <td>0%</td>
-                <td>0%</td>
+                <td class="sfcTD">0</td>
+                <td class="sfcTD">1</td>
+                <td class="sfcTD">5,000</td>
+                <td class="sfcTD">100%</td>
+                <td class="sfcTD">0%</td>
+                <td class="sfcTD">0%</td>
+                <td class="sfcTD">0%</td>
             </tr>
             <tr>
-                <td>1</td>
-                <td>2</td>
-                <td>10,000</td>
-                <td>95%</td>
-                <td>5%</td>
-                <td>0%</td>
-                <td>0%</td>
+                <td class="sfcTD">1</td>
+                <td class="sfcTD">2</td>
+                <td class="sfcTD">10,000</td>
+                <td class="sfcTD">95%</td>
+                <td class="sfcTD">5%</td>
+                <td> class="sfcTD"0%</td>
+                <td class="sfcTD">0%</td>
             </tr>
             <tr>
-                <td>2</td>
-                <td>3</td>
-                <td>20,000</td>
-                <td>90%</td>
-                <td>10%</td>
-                <td>0%</td>
-                <td>0%</td>
+                <td class="sfcTD">2</td>
+                <td class="sfcTD">3</td>
+                <td class="sfcTD">20,000</td>
+                <td class="sfcTD">90%</td>
+                <td class="sfcTD">10%</td>
+                <td class="sfcTD">0%</td>
+                <td class="sfcTD">0%</td>
             </tr>
             <tr>
-                <td>3</td>
-                <td>4</td>
-                <td>35,000</td>
-                <td>85%</td>
-                <td>15%</td>
-                <td>0%</td>
-                <td>0%</td>
+                <td class="sfcTD">3</td>
+                <td class="sfcTD">4</td>
+                <td class="sfcTD">35,000</td>
+                <td class="sfcTD">85%</td>
+                <td class="sfcTD">15%</td>
+                <td class="sfcTD">0%</td>
+                <td class="sfcTD">0%</td>
             </tr>
             <tr>
-                <td>4</td>
-                <td>5</td>
-                <td>50,000</td>
-                <td>80%</td>
-                <td>20%</td>
-                <td>0%</td>
-                <td>0%</td>
+                <td class="sfcTD">4</td>
+                <td class="sfcTD">5</td>
+                <td class="sfcTD">50,000</td>
+                <td class="sfcTD">80%</td>
+                <td class="sfcTD">20%</td>
+                <td class="sfcTD">0%</td>
+                <td class="sfcTD">0%</td>
             </tr>
             <tr>
-                <td>5</td>
-                <td>6</td>
-                <td>80,000</td>
-                <td>75%</td>
-                <td>25%</td>
-                <td>0%</td>
-                <td>0%</td>
+                <td class="sfcTD">5</td>
+                <td class="sfcTD">6</td>
+                <td class="sfcTD">80,000</td>
+                <td class="sfcTD">75%</td>
+                <td class="sfcTD">25%</td>
+                <td class="sfcTD">0%</td>
+                <td class="sfcTD">0%</td>
             </tr>
             <tr>
-                <td>6</td>
-                <td>7</td>
-                <td>150,000</td>
-                <td>70%</td>
-                <td>30%</td>
-                <td>0%</td>
-                <td>0%</td>
+                <td class="sfcTD">6</td>
+                <td class="sfcTD">7</td>
+                <td class="sfcTD">150,000</td>
+                <td class="sfcTD">70%</td>
+                <td class="sfcTD">30%</td>
+                <td class="sfcTD">0%</td>
+                <td class="sfcTD">0%</td>
             </tr>
             <tr>
-                <td>7</td>
-                <td>8</td>
-                <td>200,000</td>
-                <td>65%</td>
-                <td>35%</td>
-                <td>0%</td>
-                <td>0%</td>
+                <td class="sfcTD">7</td>
+                <td class="sfcTD">8</td>
+                <td class="sfcTD">200,000</td>
+                <td class="sfcTD">65%</td>
+                <td class="sfcTD">35%</td>
+                <td class="sfcTD">0%</td>
+                <td class="sfcTD">0%</td>
             </tr>
             <tr>
-                <td>8</td>
-                <td>9</td>
-                <td>300,000</td>
-                <td>60%</td>
-                <td>40%</td>
-                <td>0%</td>
-                <td>0%</td>
+                <td class="sfcTD">8</td>
+                <td class="sfcTD">9</td>
+                <td class="sfcTD">300,000</td>
+                <td class="sfcTD">60%</td>
+                <td class="sfcTD">40%</td>
+                <td class="sfcTD">0%</td>
+                <td class="sfcTD">0%</td>
             </tr>
             <tr>
-                <td>9</td>
-                <td>10</td>
-                <td>400,000</td>
-                <td>55%</td>
-                <td>45%</td>
-                <td>0%</td>
-                <td>0%</td>
+                <td class="sfcTD">9</td>
+                <td class="sfcTD">10</td>
+                <td class="sfcTD">400,000</td>
+                <td class="sfcTD">55%</td>
+                <td class="sfcTD">45%</td>
+                <td class="sfcTD">0%</td>
+                <td class="sfcTD">0%</td>
             </tr>
             <tr>
-                <td>10</td>
-                <td>11</td>
-                <td>560,000</td>
-                <td>50%</td>
-                <td>35%</td>
-                <td>10%</td>
-                <td>5%</td>
+                <td class="sfcTD">10</td>
+                <td class="sfcTD">11</td>
+                <td class="sfcTD">560,000</td>
+                <td class="sfcTD">50%</td>
+                <td class="sfcTD">35%</td>
+                <td class="sfcTD">10%</td>
+                <td class="sfcTD">5%</td>
             </tr>
             <tr>
-                <td>11</td>
-                <td>12</td>
-                <td>640,000</td>
-                <td>45%</td>
-                <td>40%</td>
-                <td>10%</td>
-                <td>5%</td>
+                <td class="sfcTD">11</td>
+                <td class="sfcTD">12</td>
+                <td class="sfcTD">640,000</td>
+                <td class="sfcTD">45%</td>
+                <td class="sfcTD">40%</td>
+                <td class="sfcTD">10%</td>
+                <td class="sfcTD">5%</td>
             </tr>
             <tr>
-                <td>12</td>
-                <td>13</td>
-                <td>720,000</td>
-                <td>40%</td>
-                <td>40%</td>
-                <td>15%</td>
-                <td>5%</td>
+                <td class="sfcTD">12</td>
+                <td class="sfcTD">13</td>
+                <td class="sfcTD">720,000</td>
+                <td class="sfcTD">40%</td>
+                <td class="sfcTD">40%</td>
+                <td class="sfcTD">15%</td>
+                <td> class="sfcTD"5%</td>
             </tr>
             <tr>
-                <td>13</td>
-                <td>14</td>
-                <td>800,000</td>
-                <td>35%</td>
-                <td>45%</td>
-                <td>15%</td>
-                <td>5%</td>
+                <td class="sfcTD">13</td>
+                <td class="sfcTD">14</td>
+                <td class="sfcTD">800,000</td>
+                <td class="sfcTD">35%</td>
+                <td class="sfcTD">45%</td>
+                <td class="sfcTD">15%</td>
+                <td class="sfcTD">5%</td>
             </tr>
             <tr>
-                <td>14</td>
-                <td>15</td>
-                <td>1,200,000</td>
-                <td>30%</td>
-                <td>45%</td>
-                <td>20%</td>
-                <td>5%</td>
+                <td class="sfcTD">14</td>
+                <td class="sfcTD">15</td>
+                <td class="sfcTD">1,200,000</td>
+                <td class="sfcTD">30%</td>
+                <td class="sfcTD">45%</td>
+                <td class="sfcTD">20%</td>
+                <td class="sfcTD">5%</td>
             </tr>
             <tr>
-                <td>15</td>
-                <td>16</td>
-                <td>1,600,000</td>
-                <td>25%</td>
-                <td>50%</td>
-                <td>20%</td>
-                <td>5%</td>
+                <td class="sfcTD">15</td>
+                <td class="sfcTD">16</td>
+                <td class="sfcTD">1,600,000</td>
+                <td class="sfcTD">25%</td>
+                <td class="sfcTD">50%</td>
+                <td class="sfcTD">20%</td>
+                <td class="sfcTD">5%</td>
             </tr>
             <tr>
-                <td>16</td>
-                <td>17</td>
-                <td>2,000,000</td>
-                <td>20%</td>
-                <td>50%</td>
-                <td>25%</td>
-                <td>5%</td>
+                <td class="sfcTD">16</td>
+                <td class="sfcTD">17</td>
+                <td class="sfcTD">2,000,000</td>
+                <td class="sfcTD">20%</td>
+                <td class="sfcTD">50%</td>
+                <td class="sfcTD">25%</td>
+                <td class="sfcTD">5%</td>
             </tr>
             <tr>
-                <td>17</td>
-                <td>18</td>
-                <td>2,400,000</td>
-                <td>15%</td>
-                <td>55%</td>
-                <td>25%</td>
-                <td>5%</td>
+                <td class="sfcTD">17</td>
+                <td class="sfcTD">18</td>
+                <td class="sfcTD">2,400,000</td>
+                <td class="sfcTD">15%</td>
+                <td class="sfcTD">55%</td>
+                <td class="sfcTD">25%</td>
+                <td class="sfcTD">5%</td>
             </tr>
             <tr>
-                <td>18</td>
-                <td>19</td>
-                <td>2,800,000</td>
-                <td>10%</td>
-                <td>55%</td>
-                <td>30%</td>
-                <td>5%</td>
+                <td class="sfcTD">18</td>
+                <td class="sfcTD">19</td>
+                <td class="sfcTD">2,800,000</td>
+                <td class="sfcTD">10%</td>
+                <td class="sfcTD">55%</td>
+                <td class="sfcTD">30%</td>
+                <td class="sfcTD">5%</td>
             </tr>
             <tr>
-                <td>19</td>
-                <td>20</td>
-                <td>3,200,000</td>
-                <td>5%</td>
-                <td>60%</td>
-                <td>30%</td>
-                <td>5%</td>
+                <td class="sfcTD">19</td>
+                <td class="sfcTD">20</td>
+                <td class="sfcTD">3,200,000</td>
+                <td class="sfcTD">5%</td>
+                <td class="sfcTD">60%</td>
+                <td class="sfcTD">30%</td>
+                <td class="sfcTD">5%</td>
             </tr>
             <tr>
-                <td>20</td>
+                <td class="sfcTD">20</td>
+                <td class="sfcTD">21</td>
+                <td class="sfcTD">3,600,000</td>
+                <td class="sfcTD">1%</td>
+                <td class="sfcTD">49%</td>
+                <td class="sfcTD">40%</td>
+                <td class="sfcTD">10%</td>
+            </tr>
+            <tr>
                 <td>21</td>
-                <td>3,600,000</td>
-                <td>1%</td>
-                <td>49%</td>
-                <td>40%</td>
-                <td>10%</td>
+                <td class="sfcTD">22</td>
+                <td class="sfcTD">4,000,000</td>
+                <td class="sfcTD">1%</td>
+                <td class="sfcTD">49%</td>
+                <td class="sfcTD">40%</td>
+                <td class="sfcTD">10%</td>
             </tr>
             <tr>
-                <td>21</td>
-                <td>22</td>
-                <td>4,000,000</td>
-                <td>1%</td>
-                <td>49%</td>
-                <td>40%</td>
-                <td>10%</td>
-            </tr>
-            <tr>
-                <td>22</td>
-                <td>23</td>
-                <td>4,800,000</td>
-                <td>1%</td>
-                <td>49%</td>
-                <td>40%</td>
-                <td>10%</td>
+                <td class="sfcTD">22</td>
+                <td class="sfcTD">23</td>
+                <td class="sfcTD">4,800,000</td>
+                <td class="sfcTD">1%</td>
+                <td class="sfcTD">49%</td>
+                <td class="sfcTD">40%</td>
+                <td class="sfcTD">10%</td>
             </tr>
             <tr>
                 <td>23</td>
@@ -318,13 +318,13 @@
                 <td>15%</td>
             </tr>
             <tr>
-                <td>30</td>
-                <td>31</td>
-                <td>30,000,000</td>
-                <td>1%</td>
-                <td>39%</td>
-                <td>45%</td>
-                <td>15%</td>
+                <td class="sfcTD">30</td>
+                <td class="sfcTD">31</td>
+                <td class="sfcTD">30,000,000</td>
+                <td class="sfcTD">1%</td>
+                <td class="sfcTD">39%</td>
+                <td class="sfcTD">45%</td>
+                <td class="sfcTD">15%</td>
             </tr>
         </table>
     </body>
