Debug SFC Content

--- a/sfCost.html
+++ b/sfCost.html
@@ -62,7 +62,7 @@
                 <td class="sfcTD">10,000</td>
                 <td class="sfcTD">95%</td>
                 <td class="sfcTD">5%</td>
-                <td> class="sfcTD"0%</td>
+                <td class="sfcTD">0%</td>
                 <td class="sfcTD">0%</td>
             </tr>
             <tr>
