--- a/sfCost.html
+++ b/sfCost.html
@@ -162,7 +162,7 @@
                 <td class="sfcTD">40%</td>
                 <td class="sfcTD">40%</td>
                 <td class="sfcTD">15%</td>
-                <td> class="sfcTD"5%</td>
+                <td class="sfcTD">5%</td>
             </tr>
             <tr>
                 <td class="sfcTD">13</td>
@@ -237,7 +237,7 @@
                 <td class="sfcTD">10%</td>
             </tr>
             <tr>
-                <td>21</td>
+                <td class="sfcTD">21</td>
                 <td class="sfcTD">22</td>
                 <td class="sfcTD">4,000,000</td>
                 <td class="sfcTD">1%</td>
@@ -255,67 +255,67 @@
                 <td class="sfcTD">10%</td>
             </tr>
             <tr>
-                <td>23</td>
-                <td>24</td>
-                <td>5,600,000</td>
-                <td>1%</td>
-                <td>49%</td>
-                <td>40%</td>
-                <td>10%</td>
+                <td class="sfcTD">23</td>
+                <td class="sfcTD">24</td>
+                <td class="sfcTD">5,600,000</td>
+                <td class="sfcTD">1%</td>
+                <td class="sfcTD">49%</td>
+                <td class="sfcTD">40%</td>
+                <td class="sfcTD">10%</td>
             </tr>
             <tr>
-                <td>24</td>
-                <td>25</td>
-                <td>6,400,000</td>
-                <td>1%</td>
-                <td>49%</td>
-                <td>40%</td>
-                <td>10%</td>
+                <td class="sfcTD">24</td>
+                <td class="sfcTD">25</td>
+                <td class="sfcTD">6,400,000</td>
+                <td class="sfcTD">1%</td>
+                <td class="sfcTD">49%</td>
+                <td class="sfcTD">40%</td>
+                <td class="sfcTD">10%</td>
             </tr>
             <tr>
-                <td>25</td>
-                <td>26</td>
-                <td>8,100,000</td>
-                <td>1%</td>
-                <td>39%</td>
-                <td>45%</td>
-                <td>15%</td>
+                <td class="sfcTD">25</td>
+                <td class="sfcTD">26</td>
+                <td class="sfcTD">8,100,000</td>
+                <td class="sfcTD">1%</td>
+                <td class="sfcTD">39%</td>
+                <td class="sfcTD">45%</td>
+                <td class="sfcTD">15%</td>
             </tr>
             <tr>
-                <td>26</td>
-                <td>27</td>
-                <td>9,000,000</td>
-                <td>1%</td>
-                <td>39%</td>
-                <td>45%</td>
-                <td>15%</td>
+                <td class="sfcTD">26</td>
+                <td class="sfcTD">27</td>
+                <td class="sfcTD">9,000,000</td>
+                <td class="sfcTD">1%</td>
+                <td class="sfcTD">39%</td>
+                <td class="sfcTD">45%</td>
+                <td class="sfcTD">15%</td>
             </tr>
             <tr>
-                <td>27</td>
-                <td>28</td>
-                <td>13,500,000</td>
-                <td>1%</td>
-                <td>39%</td>
-                <td>45%</td>
-                <td>15%</td>
+                <td class="sfcTD">27</td>
+                <td class="sfcTD">28</td>
+                <td class="sfcTD">13,500,000</td>
+                <td class="sfcTD">1%</td>
+                <td class="sfcTD">39%</td>
+                <td class="sfcTD">45%</td>
+                <td class="sfcTD">15%</td>
             </tr>
             <tr>
-                <td>28</td>
-                <td>29</td>
-                <td>18,000,000</td>
-                <td>1%</td>
-                <td>39%</td>
-                <td>45%</td>
-                <td>15%</td>
+                <td class="sfcTD">28</td>
+                <td class="sfcTD">29</td>
+                <td class="sfcTD">18,000,000</td>
+                <td class="sfcTD">1%</td>
+                <td class="sfcTD">39%</td>
+                <td class="sfcTD">45%</td>
+                <td class="sfcTD">15%</td>
             </tr>
             <tr>
-                <td>29</td>
-                <td>30</td>
-                <td>20,700,000</td>
-                <td>1%</td>
-                <td>39%</td>
-                <td>45%</td>
-                <td>15%</td>
+                <td class="sfcTD">29</td>
+                <td class="sfcTD">30</td>
+                <td class="sfcTD">20,700,000</td>
+                <td class="sfcTD">1%</td>
+                <td class="sfcTD">39%</td>
+                <td class="sfcTD">45%</td>
+                <td class="sfcTD">15%</td>
             </tr>
             <tr>
                 <td class="sfcTD">30</td>
