Adding table skeleton for pba

--- a/pba.html
+++ b/pba.html
@@ -36,11 +36,120 @@
         </div>
         <h1 class="pbaH1">Weapon Perfect Base Attack</h1>
 
-        <!-- Table For PBA -->
-        <table class="pbaTable">
+        <!-- Table For Normal PBA Table -->
+        <table class="normalpbaTable">
             <tr>
-                <th></th>
-                <th>Normal</th>
+                <th class="pbaTH"></th>
+                <th class="pbaTH">Normal</th>
+                <th class="pbaTH">Rare</th>
+                <th class="pbaTH">Epic</th>
+                <th class="pbaTH">Unique</th>
+                <th class="pbaTH">Legendary</th>
+                <th class="pbaTH">Mythic</th>
+                <th class="pbaTH">Ancient</th>
+                <th class="pbaTH">Necro</th>
+            </tr>
+            <tr>
+                <td class="pbaTD">Secondary Weapon</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Warriors (2H Wielders)</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Warriors (1H + Desperado)</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Archers</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Thieves</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Guns</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Knucklers</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Mages</td>
+            </tr>
+        </table>
+
+        <!-- Table for Innocence PBA Table -->
+        <table class="innopbaTable">
+            <tr>
+                <th class="pbaTH"></th>
+                <th class="pbaTH">Normal</th>
+                <th class="pbaTH">Rare</th>
+                <th class="pbaTH">Epic</th>
+                <th class="pbaTH">Unique</th>
+                <th class="pbaTH">Legendary</th>
+                <th class="pbaTH">Mythic</th>
+                <th class="pbaTH">Ancient</th>
+                <th class="pbaTH">Necro</th>
+            </tr>
+            <tr>
+                <td class="pbaTD">Secondary Weapon</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Warriors (2H Wielders)</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Warriors (1H + Desperado)</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Archers</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Thieves</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Guns</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Knucklers</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Mages</td>
+            </tr>
+        </table>
+
+        <!-- Table for Emblem PBA Table -->
+        <table class="emblempbaTable">
+            <tr>
+                <th class="pbaTH"></th>
+                <th class="pbaTH">Normal</th>
+                <th class="pbaTH">Rare</th>
+                <th class="pbaTH">Epic</th>
+                <th class="pbaTH">Unique</th>
+                <th class="pbaTH">Legendary</th>
+                <th class="pbaTH">Mythic</th>
+                <th class="pbaTH">Ancient</th>
+                <th class="pbaTH">Necro</th>
+            </tr>
+            <tr>
+                <td class="pbaTD">Secondary Weapon</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Warriors (2H Wielders)</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Warriors (1H + Desperado)</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Archers</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Thieves</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Guns</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Knucklers</td>
+            </tr>
+            <tr>
+                <td class="pbaTD">Mages</td>
             </tr>
         </table>
     </body>
