--- a/pba.html
+++ b/pba.html
@@ -51,6 +51,14 @@
             </tr>
             <tr>
                 <td class="pbaTD">Secondary Weapon</td>
+                <td class="pbaTD">41</td>
+                <td class="pbaTD">129</td>
+                <td class="pbaTD">278</td>
+                <td class="pbaTD">502</td>
+                <td class="pbaTD">831</td>
+                <td class="pbaTD">1510</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Warriors (2H Wielders)</td>
