--- a/pba.html
+++ b/pba.html
@@ -62,6 +62,14 @@
             </tr>
             <tr>
                 <td class="pbaTD">Warriors (2H Wielders)</td>
+                <td class="pbaTD">26</td>
+                <td class="pbaTD">220</td>
+                <td class="pbaTD">650</td>
+                <td class="pbaTD">1316</td>
+                <td class="pbaTD">2279</td>
+                <td class="pbaTD">3787</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Warriors (1H + Desperado)</td>
