--- a/pba.html
+++ b/pba.html
@@ -73,6 +73,13 @@
             </tr>
             <tr>
                 <td class="pbaTD">Warriors (1H + Desperado)</td>
+                <td class="pbaTD">225</td>
+                <td class="pbaTD">662</td>
+                <td class="pbaTD">1338</td>
+                <td class="pbaTD">2317</td>
+                <td class="pbaTD">3849</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Archers</td>
