--- a/pba.html
+++ b/pba.html
@@ -73,6 +73,7 @@
             </tr>
             <tr>
                 <td class="pbaTD">Warriors (1H + Desperado)</td>
+                <td class="pbaTD">28</td>
                 <td class="pbaTD">225</td>
                 <td class="pbaTD">662</td>
                 <td class="pbaTD">1338</td>
