--- a/pba.html
+++ b/pba.html
@@ -95,6 +95,9 @@
             </tr>
             <tr>
                 <td class="pbaTD">Thieves</td>
+                <td class="pbaTD">29</td>
+                <td class="pbaTD">225</td>
+                <td class="pbaTD">660</td>
             </tr>
             <tr>
                 <td class="pbaTD">Guns</td>
