--- a/pba.html
+++ b/pba.html
@@ -98,6 +98,11 @@
                 <td class="pbaTD">29</td>
                 <td class="pbaTD">225</td>
                 <td class="pbaTD">660</td>
+                <td class="pbaTD">1333</td>
+                <td class="pbaTD">2307</td>
+                <td class="pbaTD">3832</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Guns</td>
