--- a/pba.html
+++ b/pba.html
@@ -106,6 +106,12 @@
             </tr>
             <tr>
                 <td class="pbaTD">Guns</td>
+                <td class="pbaTD">28</td>
+                <td class="pbaTD">225</td>
+                <td class="pbaTD">662</td>
+                <td class="pbaTD">1338</td>
+                <td class="pbaTD">2317</td>
+                <td class="pbaTD">3849</td>
             </tr>
             <tr>
                 <td class="pbaTD">Knucklers</td>
