--- a/pba.html
+++ b/pba.html
@@ -126,6 +126,14 @@
             </tr>
             <tr>
                 <td class="pbaTD">Mages</td>
+                <td class="pbaTD">30</td>
+                <td class="pbaTD">225</td>
+                <td class="pbaTD">658</td>
+                <td class="pbaTD">1328</td>
+                <td class="pbaTD">2298</td>
+                <td class="pbaTD">3817</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
         </table>
 
