--- a/pba.html
+++ b/pba.html
@@ -37,6 +37,7 @@
         <h1 class="pbaH1">Weapon Perfect Base Attack</h1>
 
         <!-- Table For Normal PBA Table -->
+        <h2>Normal</h2>
         <table class="normalpbaTable">
             <tr>
                 <th class="pbaTH"></th>
@@ -138,6 +139,7 @@
         </table>
 
         <!-- Table for Innocence PBA Table -->
+        <h2>Innocence</h2>
         <table class="innopbaTable">
             <tr>
                 <th class="pbaTH"></th>
@@ -177,6 +179,7 @@
         </table>
 
         <!-- Table for Emblem PBA Table -->
+        <h2>Emblem</h2>
         <table class="emblempbaTable">
             <tr>
                 <th class="pbaTH"></th>
