Adding some contents for innocence pba

--- a/pba.html
+++ b/pba.html
@@ -154,9 +154,11 @@
             </tr>
             <tr>
                 <td class="pbaTD">Secondary Weapon</td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Warriors (2H Wielders)</td>
+                <td class="pbaTD">26</td>
             </tr>
             <tr>
                 <td class="pbaTD">Warriors (1H + Desperado)</td>
