--- a/pba.html
+++ b/pba.html
@@ -166,6 +166,14 @@
             </tr>
             <tr>
                 <td class="pbaTD">Warriors (1H + Desperado)</td>
+                <td class="pbaTD">28</td>
+                <td class="pbaTD">221</td>
+                <td class="pbaTD">651</td>
+                <td class="pbaTD">1317</td>
+                <td class="pbaTD">2280</td>
+                <td class="pbaTD">3788</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Archers</td>
