--- a/pba.html
+++ b/pba.html
@@ -177,6 +177,8 @@
             </tr>
             <tr>
                 <td class="pbaTD">Archers</td>
+                <td class="pbaTD">28</td>
+                <td class="pbaTD">222</td>
             </tr>
             <tr>
                 <td class="pbaTD">Thieves</td>
