--- a/pba.html
+++ b/pba.html
@@ -188,6 +188,14 @@
             </tr>
             <tr>
                 <td class="pbaTD">Thieves</td>
+                <td class="pbaTD">29</td>
+                <td class="pbaTD">222</td>
+                <td class="pbaTD">652</td>
+                <td class="pbaTD">1318</td>
+                <td class="pbaTD">2281</td>
+                <td class="pbaTd">3790</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Guns</td>
