Adding Gun inno PBA

--- a/pba.html
+++ b/pba.html
@@ -199,6 +199,9 @@
             </tr>
             <tr>
                 <td class="pbaTD">Guns</td>
+                <td class="pbaTD">28</td>
+                <td class="pbaTD">221</td>
+                <td class="pbaTD">651</td>
             </tr>
             <tr>
                 <td class="pbaTD">Knucklers</td>
