--- a/pba.html
+++ b/pba.html
@@ -202,6 +202,11 @@
                 <td class="pbaTD">28</td>
                 <td class="pbaTD">221</td>
                 <td class="pbaTD">651</td>
+                <td class="pbaTD">1317</td>
+                <td class="pbaTD">2280</td>
+                <td class="pbaTd">3788</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Knucklers</td>
