--- a/pba.html
+++ b/pba.html
@@ -210,6 +210,14 @@
             </tr>
             <tr>
                 <td class="pbaTD">Knucklers</td>
+                <td class="pbaTD">29</td>
+                <td class="pbaTD">222</td>
+                <td class="pbaTD">652</td>
+                <td class="pbaTD">1318</td>
+                <td class="pbaTD">2281</td>
+                <td class="pbaTD">3790</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Mages</td>
