Adding Mage inno PBA

--- a/pba.html
+++ b/pba.html
@@ -221,6 +221,14 @@
             </tr>
             <tr>
                 <td class="pbaTD">Mages</td>
+                <td class="pbaTD">30</td>
+                <td class="pbaTD">223</td>
+                <td class="pbaTD">653</td>
+                <td class="pbaTD">1319</td>
+                <td class="pbaTD">2283</td>
+                <td class="pbaTD">3792</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
         </table>
 
