Adding Emblem Warrior 2H Wielder PBA

--- a/pba.html
+++ b/pba.html
@@ -237,9 +237,6 @@
         <table class="emblempbaTable">
             <tr>
                 <th class="pbaTH"></th>
-                <th class="pbaTH">Normal</th>
-                <th class="pbaTH">Rare</th>
-                <th class="pbaTH">Epic</th>
                 <th class="pbaTH">Unique</th>
                 <th class="pbaTH">Legendary</th>
                 <th class="pbaTH">Mythic</th>
@@ -248,6 +245,10 @@
             </tr>
             <tr>
                 <td class="pbaTD">Warriors (2H Wielders)</td>
+                <td class="pbaTD">1710</td>
+                <td class="pbaTD">2962</td>
+                <td class="pbaTD">4923</td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Warriors (1H + Desperado)</td>
