--- a/pba.html
+++ b/pba.html
@@ -261,6 +261,11 @@
             </tr>
             <tr>
                 <td class="pbaTD">Archers</td>
+                <td class="pbaTD">1338</td>
+                <td class="pbaTD">3012</td>
+                <td class="pbaTD">5003</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Thieves</td>
