Adding Thief emblem PBA

--- a/pba.html
+++ b/pba.html
@@ -269,6 +269,11 @@
             </tr>
             <tr>
                 <td class="pbaTD">Thieves</td>
+                <td class="pbaTD">1732</td>
+                <td class="pbaTD">2999</td>
+                <td class="pbaTD">4981</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Guns</td>
