Adding Guns emblem PBA

--- a/pba.html
+++ b/pba.html
@@ -277,6 +277,11 @@
             </tr>
             <tr>
                 <td class="pbaTD">Guns</td>
+                <td class="pbaTD">1739</td>
+                <td class="pbaTD">2962</td>
+                <td class="pbaTD">4923</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Knucklers</td>
