Adding Kunucklers and Mages Emblem PBA

--- a/pba.html
+++ b/pba.html
@@ -285,9 +285,19 @@
             </tr>
             <tr>
                 <td class="pbaTD">Knucklers</td>
+                <td class="pbaTD">1732</td>
+                <td class="pbaTD">2999</td>
+                <td class="pbaTD">4981</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Mages</td>
+                <td class="pbaTD">1726</td>
+                <td class="pbaTD">2987</td>
+                <td class="pbaTD">4962</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
         </table>
     </body>
