--- a/pba.html
+++ b/pba.html
@@ -113,6 +113,8 @@
                 <td class="pbaTD">1338</td>
                 <td class="pbaTD">2317</td>
                 <td class="pbaTD">3849</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Knucklers</td>
@@ -163,6 +165,8 @@
                 <td class="pbaTD">1316</td>
                 <td class="pbaTD">2279</td>
                 <td class="pbaTD">3787</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Warriors (1H + Desperado)</td>
@@ -193,7 +197,7 @@
                 <td class="pbaTD">652</td>
                 <td class="pbaTD">1318</td>
                 <td class="pbaTD">2281</td>
-                <td class="pbaTd">3790</td>
+                <td class="pbaTD">3790</td>
                 <td class="pbaTD"></td>
                 <td class="pbaTD"></td>
             </tr>
@@ -204,7 +208,7 @@
                 <td class="pbaTD">651</td>
                 <td class="pbaTD">1317</td>
                 <td class="pbaTD">2280</td>
-                <td class="pbaTd">3788</td>
+                <td class="pbaTD">3788</td>
                 <td class="pbaTD"></td>
                 <td class="pbaTD"></td>
             </tr>
