--- a/pba.html
+++ b/pba.html
@@ -37,7 +37,7 @@
         <h1 class="pbaH1">Weapon Perfect Base Attack</h1>
 
         <!-- Table For Normal PBA Table -->
-        <h2 class="pbaTT">Normal</h2>
+        <h2 class="pbaH2">Normal</h2>
         <table class="normalpbaTable">
             <tr>
                 <th class="pbaTH"></th>
@@ -141,7 +141,7 @@
         </table>
 
         <!-- Table for Innocence PBA Table -->
-        <h2 class="pbaTT">Innocence</h2>
+        <h2 class="pbaH2">Innocence</h2>
         <table class="innopbaTable">
             <tr>
                 <th class="pbaTH"></th>
@@ -237,7 +237,7 @@
         </table>
 
         <!-- Table for Emblem PBA Table -->
-        <h2 class="pbaTT">Emblem</h2>
+        <h2 class="pbaH2">Emblem</h2>
         <table class="emblempbaTable">
             <tr>
                 <th class="pbaTH"></th>
