Adding fillers in the table

--- a/pba.html
+++ b/pba.html
@@ -162,6 +162,8 @@
                 <td class="pbaTD">502</td>
                 <td class="pbaTD">831</td>
                 <td class="pbaTD">1510</td>
+                <td class="pbaTD"></td>
+                <td class="pbaTD"></td>
             </tr>
             <tr>
                 <td class="pbaTD">Warriors (2H Wielders)</td>
