Adding Refresh to top.

--- a/sfCost.html
+++ b/sfCost.html
@@ -327,5 +327,10 @@
                 <td class="sfcTD">15%</td>
             </tr>
         </table>
+        <script>  
+            window.onbeforeunload = function () {
+                window.scrollTo(0, 0);
+            }; 
+     </script>
     </body>
 </html>
