--- a/pba.html
+++ b/pba.html
@@ -312,5 +312,10 @@
                 <td class="pbaTD"></td>
             </tr>
         </table>
+        <script>  
+            window.onbeforeunload = function () {
+                window.scrollTo(0, 0);
+            }; 
+     </script>
     </body>
 </html>
