--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <style>
 
         </style>
+         <script>  
+            window.onbeforeunload = function () {
+                window.scrollTo(0, 0);
+            }; 
+        </script>
     </head>
     <body>
         <!-- Navigation bar -->
