Editing PBA Soul Shooter

--- a/pba.html
+++ b/pba.html
@@ -111,7 +111,7 @@
                 <td class="pbaTD"></td>
             </tr>
             <tr>
-                <td class="pbaTD">Guns</td>
+                <td class="pbaTD">Guns + Soul Shooter</td>
                 <td class="pbaTD">28</td>
                 <td class="pbaTD">225</td>
                 <td class="pbaTD">662</td>
@@ -215,7 +215,7 @@
                 <td class="pbaTD"></td>
             </tr>
             <tr>
-                <td class="pbaTD">Guns</td>
+                <td class="pbaTD">Guns + Soul Shooter</td>
                 <td class="pbaTD">28</td>
                 <td class="pbaTD">221</td>
                 <td class="pbaTD">651</td>
@@ -293,7 +293,7 @@
                 <td class="pbaTD"></td>
             </tr>
             <tr>
-                <td class="pbaTD">Guns</td>
+                <td class="pbaTD">Guns + Soul Shooter</td>
                 <td class="pbaTD">1739</td>
                 <td class="pbaTD">2962</td>
                 <td class="pbaTD">4923</td>
